--- a/Spring__002/src/main/webapp/resources/css/style.css
+++ b/Spring__002/src/main/webapp/resources/css/style.css
@@ -5,255 +5,539 @@ Author:WowThemes.net,https://www.wowthemes.net
 License:https://www.wowfreebies.net/page/license
 */
 
+/* --------------------------------------------------- Header ----------------------------------------------------- */
+#header {
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-justify-content: space-between;
+	-webkit-justify-content: space-between;
+	-ms-justify-content: space-between;
+	justify-content: space-between;
+	background-color: #ffffff;
+	border-bottom: solid 1px rgba(160, 160, 160, 0.3);
+	height: 3.5em;
+	left: 0;
+	line-height: 3.5em;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 10000;
+}
+
+#header a {
+	color: inherit;
+	text-decoration: none;
+}
+
+#header ul {
+	list-style: none;
+	margin: 0;
+	padding-left: 0;
+}
+
+#header ul li {
+	display: inline-block;
+	padding-left: 0;
+}
+
+#header h1 {
+	height: inherit;
+	line-height: inherit;
+	padding: 0 0 0 1.5em;
+	white-space: nowrap;
+}
+
+#header h1 a {
+	font-size: 0.7em;
+}
+
+#header .links {
+	-moz-flex: 1;
+	-webkit-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+	border-left: solid 1px rgba(160, 160, 160, 0.3);
+	height: inherit;
+	line-height: inherit;
+	margin-left: 1.5em;
+	overflow: hidden;
+	padding-left: 1.5em;
+}
+
+#header .links ul li {
+	border-left: solid 1px rgba(160, 160, 160, 0.3);
+	line-height: 1;
+	margin-left: 1em;
+	padding-left: 1em;
+}
+
+#header .links ul li:first-child {
+	border-left: 0;
+	margin-left: 0;
+	padding-left: 0;
+}
+
+#header .links ul li a {
+	border-bottom: 0;
+	font-family: "Raleway", Helvetica, sans-serif;
+	font-size: 0.7em;
+	font-weight: 400;
+	letter-spacing: 0.25em;
+	text-transform: uppercase;
+}
+
+/* --------------------------------------------------- BUTTON ----------------------------------------------------- */
+button {
+	margin: 20px;
+}
+
+.custom-btn {
+	width: 130px;
+	height: 40px;
+	color: #fff;
+	border-radius: 5px;
+	padding: 10px 25px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 500;
+	background: transparent;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	position: relative;
+	display: inline-block;
+	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px
+		0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
+	outline: none;
+}
+
+.btn-8 {
+	background-color: #f0ecfc;
+	background-image: linear-gradient(315deg, #f0ecfc 0%, #c797eb 74%);
+	line-height: 42px;
+	padding: 0;
+	border: none;
+	margin-bottom: auto;
+	margin-top: auto;
+}
+
+.btn-8 span {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.btn-8:before, .btn-8:after {
+	position: absolute;
+	content: "";
+	right: 0;
+	bottom: 0;
+	background: #c797eb;
+	/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+	transition: all 0.3s ease;
+}
+
+.btn-8:before {
+	height: 0%;
+	width: 2px;
+}
+
+.btn-8:after {
+	width: 0%;
+	height: 2px;
+}
+
+.btn-8:hover:before {
+	height: 100%;
+}
+
+.btn-8:hover:after {
+	width: 100%;
+}
+
+.btn-8:hover {
+	background: transparent;
+}
+
+.btn-8 span:hover {
+	color: #c797eb;
+}
+
+.btn-8 span:before, .btn-8 span:after {
+	position: absolute;
+	content: "";
+	left: 0;
+	top: 0;
+	background: #c797eb;
+	/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+	transition: all 0.3s ease;
+}
+
+.btn-8 span:hover {
+	color: #c797eb;
+}
+
+.btn-8 span:before, .btn-8 span:after {
+	position: absolute;
+	content: "";
+	left: 0;
+	top: 0;
+	background: #c797eb;
+	/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+	transition: all 0.3s ease;
+}
+
+.btn-8 span:before {
+	width: 2px;
+	height: 0%;
+}
+
+.btn-8 span:after {
+	height: 2px;
+	width: 0%;
+}
+
+.btn-8 span:hover:before {
+	height: 100%;
+}
+
+.btn-8 span:hover:after {
+	width: 100%;
+}
+
+.btn-16 {
+	border: none;
+	color: #000;
+	margin-top: auto;
+}
+
+.btn-16:after {
+	position: absolute;
+	content: "";
+	width: 0;
+	height: 100%;
+	top: 0;
+	left: 0;
+	direction: rtl;
+	z-index: -1;
+	box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9, 7px 7px
+		20px 0px #0002, 4px 4px 5px 0px #0001;
+	transition: all 0.3s ease;
+}
+
+.btn-16:hover {
+	color: #000;
+}
+
+.btn-16:hover:after {
+	left: auto;
+	right: 0;
+	width: 100%;
+}
+
+.btn-16:active {
+	top: 2px;
+}
+
 /* --------------------------------------------------- GENERAL ----------------------------------------------------- */
 body {
-	font-family:'Poppins',sans-serif;
-	background:#f0f3f5;
-	font-size:14px;
+	font-family: 'Poppins', sans-serif;
+	background: #f0f3f5;
+	font-size: 14px;
 }
+
 p {
-	font-size:1.1em;
-	font-weight:300;
-	line-height:1.7em;
+	font-size: 1.1em;
+	font-weight: 300;
+	line-height: 1.7em;
 }
+
 a {
-	color:#7c6dcc;
+	color: #7c6dcc;
 }
-a,a:hover,a:focus {
-	text-decoration:none;
-	transition:all 0.3s;
+
+a, a:hover, a:focus {
+	text-decoration: none;
+	transition: all 0.3s;
 }
+
 .navbar {
-	padding:15px 10px;
-	background:#fff;
-	border:none;
-	border-radius:0;
-	margin-bottom:40px;
-	box-shadow:1px 1px 3px rgba(0,0,0,0.1);
+	padding: 15px 10px;
+	background: #fff;
+	border: none;
+	border-radius: 0;
+	margin-bottom: 40px;
+	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
 .navbar-btn {
-	box-shadow:none;
-	outline:none !important;
-	border:none;
+	box-shadow: none;
+	outline: none !important;
+	border: none;
 }
+
 img {
-	max-width:100%;
+	max-width: 100%;
 }
-.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6 {
-	line-height:1.3;
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	line-height: 1.3;
 }
 /* --------------------------------------------------- SIDEBAR ----------------------------------------------------- */
 .wrapper {
+	
 }
+
 #sidebar {
-	min-width:250px;
-	max-width:250px;
-	transition:all 0.6s cubic-bezier(0.945,0.020,0.270,0.665);
-	transform-origin:bottom left;
-	position:fixed;
-	height:100%;
-	background-color:#fff;
-	background-image:none;
-	background-size:auto;
-	background-image:-webkit-linear-gradient(top,#fff 0%,#eaeef2 100%);
-	background-image:linear-gradient(to bottom,#fff 0%,#eaeef2 100%);
-	background-repeat:repeat-x;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffeaeef2',GradientType=0);
-	-webkit-box-shadow:0px 0px 20px 1px rgba(0,0,0,0.2),inset 0px 0px 2px 1px #fff;
-	box-shadow:0px 0px 20px 1px rgba(0,0,0,0.2),inset 0px 0px 2px 1px #fff;
-	z-index:2;
-	border-top:none;
-	top:0;
-	bottom:0;
+	min-width: 250px;
+	max-width: 250px;
+	transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+	transform-origin: bottom left;
+	position: fixed;
+	height: 100%;
+	background-color: #fff;
+	background-image: none;
+	background-size: auto;
+	background-image: -webkit-linear-gradient(top, #fff 0%, #eaeef2 100%);
+	background-image: linear-gradient(to bottom, #fff 0%, #eaeef2 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',
+		endColorstr='#ffeaeef2', GradientType=0);
+	-webkit-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2), inset 0px 0px
+		2px 1px #fff;
+	box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2), inset 0px 0px 2px 1px
+		#fff;
+	z-index: 2;
+	border-top: none;
+	top: 0;
+	bottom: 0;
 }
+
 #sidebar.active {
-	margin-left:-250px;
-	transform:rotateY(100deg);
+	margin-left: -250px;
+	transform: rotateY(100deg);
 }
+
 #sidebar .sidebar-header {
-	padding:20px;
+	padding: 20px;
+	margin-top: 30px;
 }
+
 #sidebar ul.components {
-	padding:0;
-  margin-bottom:50px;
-  text-align: center;
+	padding: 0;
+	margin-bottom: 50px;
+	text-align: center;
 }
+
 #sidebar ul p {
-	padding:10px 20px;
+	padding: 10px 20px;
 }
+
 #sidebar ul li a {
-	padding:10px 20px;
-	font-size:1.1em;
-	display:block;
-	color:inherit;
+	padding: 10px 20px;
+	font-size: 1.1em;
+	display: block;
+	color: inherit;
 }
+
 #sidebar ul li a:hover {
-	color:#7c6dcc;
-	background:#fff;
+	color: #7c6dcc;
+	background: #fff;
 }
+
 a[data-toggle="collapse"] {
-	position:relative;
+	position: relative;
 }
-a[aria-expanded="false"]::before,a[aria-expanded="true"]::before {
-	display:block;
-	position:absolute;
-	right:20px;
-	font-family:FontAwesome;
-	font-size:0.8em;
-	content:"\f0d7";
+
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+	display: block;
+	position: absolute;
+	right: 20px;
+	font-family: FontAwesome;
+	font-size: 0.8em;
+	content: "\f0d7";
 }
+
 a[aria-expanded="true"]::before {
-	content:"\f0d7";
+	content: "\f0d7";
 }
+
 ul ul a {
-	font-size:0.9em !important;
-	padding-left:30px !important;
+	font-size: 0.9em !important;
+	padding-left: 30px !important;
 }
+
 .sidebar-footer {
-  padding: 20px 20px 20px 20px;
-  font-size: 12px;
-  text-align:center;
+	padding: 20px 20px 20px 20px;
+	font-size: 12px;
+	text-align: center;
 }
+
 .sidebar-footer p {
-	font-size:12px;
+	font-size: 12px;
 }
+
 .sidebar-footer .social-icons a {
-	width:25px;
-	height:25px;
-	background:rgb(255, 63, 30);
-	color:#fff;
-	display:inline-block;
-	text-align:center;
-	line-height:25px;
-	border-radius:50%;
-	margin-right:3px;
+	width: 25px;
+	height: 25px;
+	background: rgb(255, 63, 30);
+	color: #fff;
+	display: inline-block;
+	text-align: center;
+	line-height: 25px;
+	border-radius: 50%;
+	margin-right: 3px;
 	font-size: 15px;
 }
+
 .sidebar-footer .social-icons a:hover {
-  background-color:rgb(210, 48, 20);
-  color:#fff;
+	background-color: rgb(210, 48, 20);
+	color: #fff;
 }
+
 #sidebarCollapse {
-	width:50px;
-	height:50px;
-	background:#7c6dcc;
-	color:#fff;
-	position:absolute;
-	top:-10px;
-	right:-10px;
+	width: 50px;
+	height: 50px;
+	background: #7c6dcc;
+	color: #fff;
+	position: absolute;
+	top: -10px;
+	right: -10px;
 }
+
 #sidebarCollapse span {
-	width:80%;
-	height:2px;
-	margin:0 auto;
-	display:block;
-	background:#fff;
-	transition:all 0.8s cubic-bezier(0.810,-0.330,0.345,1.375);
-	transition-delay:0.2s;
+	width: 80%;
+	height: 2px;
+	margin: 0 auto;
+	display: block;
+	background: #fff;
+	transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+	transition-delay: 0.2s;
 }
+
 #sidebarCollapse span:first-of-type {
-	transform:rotate(45deg) translate(2px,2px);
+	transform: rotate(45deg) translate(2px, 2px);
 }
+
 #sidebarCollapse span:nth-of-type(2) {
-	opacity:0;
+	opacity: 0;
 }
+
 #sidebarCollapse span:last-of-type {
-	transform:rotate(-45deg) translate(1px,-1px);
+	transform: rotate(-45deg) translate(1px, -1px);
 }
+
 #sidebarCollapse.active span {
-	transform:none;
-	opacity:1;
-	margin:5px auto;
+	transform: none;
+	opacity: 1;
+	margin: 5px auto;
 }
+
 #sidebar-responsive {
-	display:none;
+	display: none;
 }
+
 .imglogo {
 	display: inline-block;
-  margin-bottom:15px;
+	margin-bottom: 15px;
 }
 /* --------------------------------------------------- CONTENT STYLE----------------------------------------------------- */
 #content {
-	padding:30px;
-	min-height:100vh;
-	transition:all 0.3s;
-	margin-left:260px;
+	padding: 30px;
+	min-height: 100vh;
+	transition: all 0.3s;
+	margin-left: 260px;
 }
 
 h1.site-title {
-  font-size: 1.3rem;
-  text-align: center;
-  font-weight: 700;
+	font-size: 1.3rem;
+	text-align: center;
+	font-weight: 700;
 }
+
 .line {
-	width:100%;
-	height:1px;
-	border-bottom:1px dashed #ddd;
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px dashed #ddd;
 	margin: 40px 0;
 }
+
 .card-title {
-  font-weight: 600;
-  font-size: 1.3rem;
+	font-weight: 600;
+	font-size: 1.3rem;
 }
+
 .text-muted {
-    color: #b3b8bb!important;
+	color: #b3b8bb !important;
 }
+
 .card {
-	border:1px solid rgba(153, 151, 193, 0.3);
+	border: 1px solid rgba(153, 151, 193, 0.3);
 }
 
 .card-columns .card {
-    margin-bottom: 1.25rem;
+	margin-bottom: 1.25rem;
 }
 /* --------------------------------------------------- Media QUERIES----------------------------------------------------- */
-@media (max-width:768px) {
+@media ( max-width :768px) {
 	#sidebar-responsive {
-		display:block;
-		position:fixed;
-		width:100%;
-		top:0;
-    z-index: 1;
+		display: block;
+		position: fixed;
+		width: 100%;
+		top: 0;
+		z-index: 1;
 	}
 	.sidebar-footer {
-		position:relative;
+		position: relative;
 	}
 	.navbar {
-		padding:10px;
+		padding: 10px;
 	}
 	.mobile-title {
-		float:left;
-		margin-bottom:0;
-		padding:2px 0;
-    font-weight:600;
-    font-size: 1.28rem;
+		float: left;
+		margin-bottom: 0;
+		padding: 2px 0;
+		font-weight: 600;
+		font-size: 1.28rem;
 	}
 	#content {
-		margin-left:0;
-		padding:90px 30px 30px 30px;
+		margin-left: 0;
+		padding: 90px 30px 30px 30px;
 	}
 	#sidebar {
-		margin-left:-250px;
-		transform:rotateY(90deg);
+		margin-left: -250px;
+		transform: rotateY(90deg);
 	}
 	#sidebar.active {
-		margin-left:0;
-		transform:none;
+		margin-left: 0;
+		transform: none;
 	}
-	#sidebarCollapse span:first-of-type,#sidebarCollapse span:nth-of-type(2),#sidebarCollapse span:last-of-type {
-		transform:none;
-		opacity:1;
-		margin:5px auto;
+	#sidebarCollapse span:first-of-type, #sidebarCollapse span:nth-of-type(2),
+		#sidebarCollapse span:last-of-type {
+		transform: none;
+		opacity: 1;
+		margin: 5px auto;
 	}
 	#sidebarCollapse.active span {
-		margin:0 auto;
+		margin: 0 auto;
 	}
 	#sidebarCollapse.active span:first-of-type {
-		transform:rotate(45deg) translate(2px,2px);
+		transform: rotate(45deg) translate(2px, 2px);
 	}
 	#sidebarCollapse.active span:nth-of-type(2) {
-		opacity:0;
+		opacity: 0;
 	}
 	#sidebarCollapse.active span:last-of-type {
-		transform: rotate(-45deg) translate(1px,-1px);
+		transform: rotate(-45deg) translate(1px, -1px);
 	}
 }
