--- a/Spring__002/src/main/webapp/resources/css/style.css
+++ b/Spring__002/src/main/webapp/resources/css/style.css
@@ -1,14 +1,88 @@
-/*
-Template Name:Mandela Effect
-Description: Bootstrap v4 Sidebar Menu Template
-Author:WowThemes.net,https://www.wowthemes.net
-License:https://www.wowfreebies.net/page/license
-*/
+*{
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    padding-top:0px;
+    padding-bottom:30px;
+    padding-left:0px;
+    margin-left:0px;
+    margin-right: 30px;
+    display: grid;
+    
+    grid-template-areas: 'header header header'
+                         'left main1 right '
+                         'left main1 right'
+                         'left main2 right';
+    width:auto;
+    height: auto;
+   
+    grid-template-rows: 1fr 11fr 11fr 4fr;
+    grid-template-columns: 1fr 5fr 1fr;
+    
+}
+.header{
+   grid-area: header;
+   background-color:pink;
+   height:50%;
+   
+}
+.header>ul{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 5px;
+
+    
+
+}
+.header>ul>li{
+    margin-left: 64px;
+
+    
+}
+
+
+.left{
+    grid-area:left;
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:yellow;
+
+    
+
+}
+.right{
+    grid-area:right;
+    background-color:green;
+   
+}
+.main1{
+    grid-area:main1;
+    background-color:red;
+    
+    
+}
+.main2{
+    grid-area:main2;
+   
+}
+
+.sidebar{
+	height:100%;
+	width:100%;
+
+}
+
+
 
 /* --------------------------------------------------- GENERAL ----------------------------------------------------- */
 body {
 	font-family:'Poppins',sans-serif;
-	background:#f0f3f5;
 	font-size:14px;
 }
 p {
@@ -43,15 +117,21 @@ img {
 	line-height:1.3;
 }
 /* --------------------------------------------------- SIDEBAR ----------------------------------------------------- */
-.wrapper {
-}
+
+
+
 #sidebar {
-	min-width:250px;
-	max-width:250px;
+	width:14%;
+	height:100%;
+	margin-top:0;
+	padding:0px;
+	border:none;
+	position:fixed;
+
+
 	transition:all 0.6s cubic-bezier(0.945,0.020,0.270,0.665);
 	transform-origin:bottom left;
-	position:fixed;
-	height:100%;
+	
 	background-color:#fff;
 	background-image:none;
 	background-size:auto;
@@ -65,6 +145,14 @@ img {
 	border-top:none;
 	top:0;
 	bottom:0;
+	
+	
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffeaeef2',GradientType=0);
+	-webkit-box-shadow:0px 0px 20px 1px rgba(0,0,0,0.2),inset 0px 0px 2px 1px #fff;
+	box-shadow:0px 0px 20px 1px rgba(0,0,0,0.2),inset 0px 0px 2px 1px #fff;
+	z-index:1;
+	top:0;
+	bottom:0;
 }
 #sidebar.active {
 	margin-left:-250px;
@@ -75,8 +163,8 @@ img {
 }
 #sidebar ul.components {
 	padding:0;
-  margin-bottom:50px;
-  text-align: center;
+  	margin-bottom:50px;
+  	text-align: center;
 }
 #sidebar ul p {
 	padding:10px 20px;
@@ -109,30 +197,7 @@ ul ul a {
 	font-size:0.9em !important;
 	padding-left:30px !important;
 }
-.sidebar-footer {
-  padding: 20px 20px 20px 20px;
-  font-size: 12px;
-  text-align:center;
-}
-.sidebar-footer p {
-	font-size:12px;
-}
-.sidebar-footer .social-icons a {
-	width:25px;
-	height:25px;
-	background:rgb(255, 63, 30);
-	color:#fff;
-	display:inline-block;
-	text-align:center;
-	line-height:25px;
-	border-radius:50%;
-	margin-right:3px;
-	font-size: 15px;
-}
-.sidebar-footer .social-icons a:hover {
-  background-color:rgb(210, 48, 20);
-  color:#fff;
-}
+
 #sidebarCollapse {
 	width:50px;
 	height:50px;
@@ -206,54 +271,7 @@ h1.site-title {
     margin-bottom: 1.25rem;
 }
 /* --------------------------------------------------- Media QUERIES----------------------------------------------------- */
-@media (max-width:768px) {
-	#sidebar-responsive {
-		display:block;
-		position:fixed;
-		width:100%;
-		top:0;
-    z-index: 1;
-	}
-	.sidebar-footer {
-		position:relative;
-	}
-	.navbar {
-		padding:10px;
-	}
-	.mobile-title {
-		float:left;
-		margin-bottom:0;
-		padding:2px 0;
-    font-weight:600;
-    font-size: 1.28rem;
-	}
-	#content {
-		margin-left:0;
-		padding:90px 30px 30px 30px;
-	}
-	#sidebar {
-		margin-left:-250px;
-		transform:rotateY(90deg);
-	}
-	#sidebar.active {
-		margin-left:0;
-		transform:none;
-	}
-	#sidebarCollapse span:first-of-type,#sidebarCollapse span:nth-of-type(2),#sidebarCollapse span:last-of-type {
-		transform:none;
-		opacity:1;
-		margin:5px auto;
-	}
-	#sidebarCollapse.active span {
-		margin:0 auto;
-	}
-	#sidebarCollapse.active span:first-of-type {
-		transform:rotate(45deg) translate(2px,2px);
-	}
-	#sidebarCollapse.active span:nth-of-type(2) {
-		opacity:0;
-	}
-	#sidebarCollapse.active span:last-of-type {
-		transform: rotate(-45deg) translate(1px,-1px);
-	}
-}
+
+
+
+
