--- a/Spring__002/src/main/webapp/resources/css/style.css
+++ b/Spring__002/src/main/webapp/resources/css/style.css
@@ -10,73 +10,75 @@
     padding-bottom:30px;
     padding-left:0px;
     margin-left:0px;
-    margin-right: 30px;
     display: grid;
+    
+
+    
     
     grid-template-areas: 'header header header'
                          'left main1 right '
                          'left main1 right'
                          'left main2 right';
     width:auto;
-    height: auto;
+    height: 1320px;
    
     grid-template-rows: 1fr 11fr 11fr 4fr;
     grid-template-columns: 1fr 5fr 1fr;
-    
     
 }
 .header{
    grid-area: header;
    height:50%;
-   margin-bottom:5%;
-   margin-left:70%;
+   margin-bottom : 7%;
    
 }
-.header>nav{
+.header>ul{
     display: flex;
     justify-content: flex-end;
-    margin-top: 12%;
+    margin-top: 5px;
 
     
 
 }
+
+
 .header>nav>a{
     margin-left: 64px;
+    font-size:22px;
+
     
 }
 .header>nav>a:nth-child(1){
-    margin-right: 700px;
-    margin-top:auto;
-    font-size:30px;
-    
-	
-    
+	margin-right:25%;
 }
 
 
 .left{
     grid-area:left;
+  
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 10%;
-   
+    background-color:yellow;
 
     
 
 }
 .right{
     grid-area:right;
- 
-    margin:0;
-    padding:0;
+    padding:0px;
+    margin:0px;
+    width:30px;
+    
    
 }
 .main1{
-	margin-left:10%;
     grid-area:main1;
-    position: relative;
-  
+    margin-left:8%;
+    height:1280px;
+    
+
+ 
 
     
     
@@ -258,7 +260,6 @@ ul ul a {
 	min-height:100vh;
 	transition:all 0.3s;
 	margin-left:260px;
-	
 }
 
 h1.site-title {
